@@ -157,6 +157,9 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-1266: Show spill count on the pig console at the end of the job (sriranjan
+via rding)
+
 PIG-1296: Skewed join fail due to negative partition index (daijy)
 
 PIG-1293: pig wrapper script tends to fail if pig is in the path and PIG_HOME
